--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,13 @@
 			<version>0.9.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>2.2.5.RELEASE</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
