add recuperação de senha

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 jwt.header=Authorization
 jwt.secret=remoto.club-01254312
 jwt.enable=true
+
+frontend-url=${FRONTEND_URL}
