--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,18 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-client</artifactId>
+			<version>2.1.4.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-server</artifactId>
+			<version>2.1.4.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
