--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,10 @@
 			<artifactId>freemarker</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 
 	</dependencies>
 
