--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.jpa.format-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/remoto-tech
+spring.datasource.url=jdbc:postgresql://containers-us-west-127.railway.app:6270/remoto-tech
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=MbjqyCcg9CbwHmgx29uK
 
 
 logging.level.org.hibernate.SQL=DEBUG
