--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,16 +6,16 @@ spring.jpa.format-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Datasource
-spring.datasource.url=jdbc:postgresql://containers-us-west-127.railway.app:6270/remoto-tech
+spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=postgres
-spring.datasource.password=MbjqyCcg9CbwHmgx29uK
+spring.datasource.password=${DATASOURCE_PASSWORD}
 
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 jwt.header=Authorization
-jwt.secret=remoto.club-01254312
+jwt.secret=${JWT_SECRET}
 jwt.enable=true
 
 frontend-url=${FRONTEND_URL}
